# NTQ

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/ntq/: Emcee_utils.py  Exp_data_utils.py  __init__.py  config_utils.py  covariance_utils.py  fit_el_utils.py  fit_pl_utils.py  generate_data_utils.py  plot_utils.py
src/ntq/model_function/: __init__.py
src/ntq/scripts/: run_EL_sampling.py  run_PL_sampling.py
