[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntq"
version = "0.1.0"
description = "Negative thermal quenching analysis through temperature-dependent PL/EL fitting using Marcus-Levich-Jortner formalism"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Kizamuel", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "emcee",
    "pandas",
    "h5py",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
notebook = [
    "ipykernel",
    "jupyter",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/junyannj/NTQ"
Repository = "https://github.com/junyannj/NTQ"